--- a/css/common.css
+++ b/css/common.css
@@ -7,11 +7,11 @@ body{
     overflow-x: hidden;
     color: rgb(29, 29, 31);
     letter-spacing: -0.05em;
-    background: white;
+    /* background: white; */
 }
  
 p{
-    line-height: 1.6;
+    line-height: 1.8;
 }
 
 a{
@@ -21,7 +21,7 @@ a{
 
 .topmenu {
     background-color: rgb(12,65,99);
-    position: absolute;
+    position: fixed;
     left: 0;
     z-index: 11;
     width: 100%;
@@ -86,6 +86,7 @@ input[type=text]:focus, input[type=password]:focus {
 	position: relative;
 }
 .content-section label{
+    padding: 40vh 0.5rem;
 	font-size: 1.2rem;
 }
 .js-footer {
@@ -93,7 +94,7 @@ input[type=text]:focus, input[type=password]:focus {
     align-items: center;
     justify-content: center;
     bottom: 0;  
-    position: relative;
+    position: sticky;
     width: 100%;
 	height: 52px;
     background: rgb(12,65,99);
