--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,24 @@
-
+.container {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+}
+.container::after {
+    width: 100%;
+    height: 100%;
+    content: "";
+    background: url('../images/backimg.png');
+    background-repeat : no-repeat;
+    background-size : cover;    
+    background-position: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    opacity: 0.75;
+}
 .topmenu-links a:not(.topmenu-links-name){
     margin-left: 1em;
     font-size: 1.1rem;
@@ -21,12 +41,13 @@
 }
 
 .main-message p{
-    color: black;
+    color: white;
     text-align: center;
-    line-height: 1.5em;
+    line-height: 1.75em;
 }
 
 .main-message strong{
-    font-size: 1.75rem;
-    color: rgb(12,65,99);
+    font-size: 2.3rem;
+    font-weight: bold;
+    color:gold;
 }
