--- a/css/common.css
+++ b/css/common.css
@@ -85,10 +85,9 @@ input[type=text]:focus, input[type=password]:focus {
 	margin: 0 auto;
 	position: relative;
 }
-.content-section label{
-    padding: 40vh 0.5rem;
+/* .content-section label{
 	font-size: 1.2rem;
-}
+} */
 .js-footer {
 	display: flex;
     align-items: center;
