--- a/css/login.css
+++ b/css/login.css
@@ -1,38 +1,72 @@
-.content-section{
-  padding: 26vh 0.5rem;
-  max-width: 30%;
+.container {
+    position: relative;
+    z-index: 1;
 }
+.container::after {
+    width: 100%;
+    height: 100%;
+    content: "";
+    background: url('../images/loginpage2.png');
+    background-repeat : no-repeat;
+    background-size : cover;    
+    /* background-position: center; */
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    /* opacity: 0.65; */
+}
+.content-section{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;    
+    flex-direction: column;
+    margin: 0 1rem;
+}
+
 .content-section h2{
-  font-size: 2rem;
-  margin-bottom: 2rem;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    color: whitesmoke;
 }
 
 .content-section label{
-	font-size: 1.2rem;
+    color: whitesmoke;
+    font-size: 1.2rem;
+    font-weight: bold;
 }
 
-.loginbtn{
-  background-color: #4CAF50;
+.login-form{
+    position: relative;
+    z-index: 1;
+}
+.login-form::after{
+    width: 100%;
+    height: 100%;
+    content: "";
+    background: url('../images/loginpage2.png');
+    background-repeat : no-repeat;
+    background-size : cover;    
+    background-position: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
 }
 
-.signupbtn{
-    background-color: #7ca1f8;
+#loginbtn{
+    padding: 0.8rem;
+    color: white;
+    font-weight: bold;
+    background-color: #ccc;
+    transition-duration: 0.4s;
 }
 
-.loginbtn, .signupbtn {
-  float: left;
-  width: 100%;
-}
-
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-@media(max-width: 500px) {
-
-  .content-section{
-    max-width: 85%; 
-  }
+#loginbtn:hover {
+    background-color: #4CAF50; /* Green */
+    color: white;
 }
