update final dbproject

--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,9 @@ p{
     margin-right: auto;
 }
 
+.topmenu-nav-links-setting{
+    margin-right: 1rem;
+}
 #ajou-univ-btn{
     color: white;
     font-weight: bolder;
